# mangoct

./: CMakeLists.txt  README.md
mgfbp/: CMakeLists.txt  FbpClass.cu  FbpClass_Agent.cu  config_mgfbp_sample.jsonc  mgfbp.vcxproj
mgfbp/include/: FbpClass.cuh  stdafx.h
mgfbp/src/: FbpClass.cu  FbpClass_Agent.cu  mgfbp.cpp
mgfpj/: CMakeLists.txt  FpjClass.cpp  FpjClass.h  FpjClass_Agent.cu  config_mgfpj_sample.jsonc  mgfpj.vcxproj
mgfpj/src/: FpjClass.cpp  FpjClass_Agent.cu  mgfpj.cpp
